--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title：Welcome to the Eva's homepage！
-description：I am learning github.
+title: Welcome to the Eva's homepage！
+description: I am learning github.
